--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- Gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.3</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- Twitter4J -->
         <dependency>
             <groupId>org.twitter4j</groupId>
@@ -131,6 +139,7 @@
                             <artifactSet>
                                 <includes>
                                     <include>org.pircbotx:pircbotx</include>
+                                    <include>com.google.code.gson:gson</include>
                                     <include>org.yml:snakeyml</include>
                                     <include>org.twitter4j:twitter4j-core</include>
                                 </includes>
