--- a/pom.xml
+++ b/pom.xml
@@ -136,17 +136,32 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <minimizeJar>true</minimizeJar>
                             <artifactSet>
                                 <includes>
                                     <include>org.pircbotx:pircbotx</include>
                                     <include>com.google.code.gson:gson</include>
-                                    <include>org.yml:snakeyml</include>
+                                    <include>org.yaml:snakeyaml</include>
                                     <include>org.twitter4j:twitter4j-core</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- Jar-Filler -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Main-Class>com.dsh105.nexus.Nexus</Main-Class>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
             </plugin>
         </plugins>
     </build>
