Add JUnit testing

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,13 @@
             <artifactId>reflections</artifactId>
             <version>0.9.9-RC1</version>
         </dependency>
+
+        <!-- JUnit unit testing -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
     </dependencies>
 
     <!-- Build -->
