--- a/pom.xml
+++ b/pom.xml
@@ -220,4 +220,14 @@
         </plugins>
     </build>
 
+    <!-- JavaDoc -->
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </reporting>
+
 </project>
