--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,14 @@
             <version>[3.0,)</version>
         </dependency>
 
+        <!-- Jline -->
+        <dependency>
+            <groupId>jline</groupId>
+            <artifactId>jline</artifactId>
+            <version>2.6</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- Unirest and its dependencies -->
         <dependency>
             <groupId>com.mashape.unirest</groupId>
