--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,7 @@
             <groupId>org.ocpsoft.prettytime</groupId>
             <artifactId>prettytime</artifactId>
             <version>3.2.5.Final</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
@@ -208,6 +209,12 @@
                                 </filter>
                                 <filter>
                                     <artifact>commons-logging:commons-logging</artifact>
+                                    <includes>
+                                        <include>**</include>
+                                    </includes>
+                                </filter>
+                                <filter>
+                                    <artifact>org.ocpsoft.prettytime:prettytime</artifact>
                                     <includes>
                                         <include>**</include>
                                     </includes>
