--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,13 @@
             <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Commons lang! -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
     </dependencies>
 
     <!-- Build -->
