--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <version>1.9</version>
             <scope>compile</scope>
         </dependency>
+        <!-- jSoup -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.7.3</version>
+        </dependency>
 
         <!-- SnakeYML -->
         <dependency>
