--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,14 @@
         <dependency>
             <groupId>org.pircbotx</groupId>
             <artifactId>pircbotx</artifactId>
-            <version>1.9</version>
+            <version>2.0</version>
             <scope>compile</scope>
+        </dependency>
+        <!-- jSoup -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.7.3</version>
         </dependency>
 
         <!-- SnakeYML -->
