--- a/pom.xml
+++ b/pom.xml
@@ -238,7 +238,6 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
-                            <minimizeJar>true</minimizeJar>
                             <filters>
                                 <filter>
                                     <artifact>log4j:log4j</artifact>
@@ -273,7 +272,7 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Main-Class>com.dsh105.nexus.Nexus</Main-Class>
+                            <Main-Class>com.dsh105.nexus.server.Main</Main-Class>
                         </manifestEntries>
                     </archive>
                 </configuration>
